# CUnitTesting

./: README.md
CUnit/: Readme.md
CUnit/include/: calc.h
CUnit/output/: sample_output.txt
CUnit/src/: CMakeLists.txt  calc.c
CUnit/tests/: CMakeLists.txt  cunit_calc.c
CUnit_CMocka/: CMakeLists.txt  Readme.md  clean.sh
CUnit_CMocka/output/: output.txt
CUnit_CMocka/src/: calc.c
CUnit_CMocka/tests/: CMakeLists.txt  cmocka_calc.c
CUnit_Check/: Readme.md  clean-cmake.sh
CUnit_Check/output/: sample_output.txt
CUnit_Check/src/: CTestTestfile.cmake  calc.c
CUnit_Check/tests/: CMakeLists.txt  check_calc.c
